# iomodel

./: CMakeLists.txt  README.md
example/: main.cpp
io_access/: aligned_allocator.hpp  file_io.cpp  file_io.hpp  image.cpp  image.hpp
measurement/: config.hpp  system_env.cpp  system_env.hpp  timer_pack.hpp  utils.hpp
model/: io_cost.cpp  io_cost.hpp  process.hpp
monitor/: background_monitor.hpp  meminfo_monitor.hpp  perf_event_monitor.hpp
pictures/: original_pic.pgm  posterized_pic.pgm  random_pic.pgm  striped_pic.pgm
plot/: arrow_t.hpp  axis.hpp  gnuplot.cpp  gnuplot.hpp  label_t.hpp  legend_t.hpp  linestyle_t.hpp  multiplot.cpp  multiplot.hpp  plot_base.cpp  plot_base.hpp  plot_utility.cpp  plot_utility.hpp  style.hpp  title_t.hpp
python_scripts/: regression.py
results/: gplot_1mb_async_cost_1_svg.cfg  gplot_async_comp_0_1s_cost_1_svg.cfg  gplot_async_comp_0_1s_cost_2_svg.cfg  gplot_async_comp_0_2s_cost_1_svg.cfg  gplot_async_comp_0_2s_cost_2_svg.cfg  gplot_async_comp_0_5s_cost_1_svg.cfg  gplot_async_comp_0_5s_cost_2_svg.cfg  gplot_async_comp_1_0s_cost_2_svg.cfg  gplot_async_comp_1s_cost_1_svg.cfg  gplot_async_comp_2s_cost_1_svg.cfg  gplot_async_cost_1_svg.cfg  gplot_async_cost_2_svg.cfg  gplot_direct_cost_1_pdf.cfg  gplot_direct_cost_1_pdf.csv  gplot_direct_cost_1_svg.cfg  gplot_direct_cost_2_pdf.cfg  gplot_direct_cost_2_svg.cfg  gplot_direct_large_range_2_svg.cfg  gplot_direct_large_range_svg.cfg  gplot_direct_nano_range_1_svg.cfg  gplot_direct_nano_range_2_svg.cfg  gplot_direct_nano_range_svg.cfg  gplot_direct_range_2_svg.cfg  gplot_direct_range_svg.cfg  (+28 more)
